--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-        BACKEND: https://campuspharma.tieraid.be
+        BACKEND: https://chiesipharma.tieraid.be
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
